css/style.css
/* ... */
/* Removes awkward default styles on some inputs for iOS */
input[type="email"],
input[type="number"],
input[type="search"],
input[type="text"],
input[type="tel"],
input[type="url"],
input[type="password"],
textarea {
  -webkit-appearance: none;
     -moz-appearance: none;
          appearance: none; }
textarea {
  min-height: 65px;
  padding-top: 6px;
  padding-bottom: 6px; }
input[type="email"]:focus,
input[type="number"]:focus,
input[type="search"]:focus,
input[type="text"]:focus,
input[type="tel"]:focus,
input[type="url"]:focus,
input[type="password"]:focus,
textarea:focus,
select:focus {
  border: 1px solid #33C3F0;
  outline: 0; }
label,
legend {
  display: block;
  margin-bottom: .5rem;
  font-weight: 600; }
fieldset {
  padding: 0;
  border-width: 0; }
input[type="checkbox"],
input[type="radio"] {
  display: inline; }
label > .label-body {
  display: inline-block;
  margin-left: .5rem;
  font-weight: normal; }


/* Lists
–––––––––––––––––––––––––––––––––––––––––––––––––– */
ul {
  list-style: circle inside; }
ol {
  list-style: decimal inside; }
ol, ul {
  padding-left: 0;
  margin-top: 0; }
ul ul,
ul ol,
ol ol,
ol ul {
  margin: 1.5rem 0 1.5rem 3rem;
  font-size: 90%; }
li {
  margin-bottom: 1rem; }


/* Code
–––––––––––––––––––––––––––––––––––––––––––––––––– */
code {
  padding: .2rem .5rem;
  margin: 0 .2rem;
  font-size: 90%;
  white-space: nowrap;
  background: #F1F1F1;
  border: 1px solid #E1E1E1;
  border-radius: 4px; }
pre > code {
  display: block;
  padding: 1rem 1.5rem;
  white-space: pre; }


/* Tables
–––––––––––––––––––––––––––––––––––––––––––––––––– */
th,
td {
  padding: 12px 15px;
  text-align: left;
  border-bottom: 1px solid #E1E1E1; }
th:first-child,
td:first-child {
  padding-left: 0; }
th:last-child,
td:last-child {
  padding-right: 0; }


/* Spacing
–––––––––––––––––––––––––––––––––––––––––––––––––– */
button,
.button {
  margin-bottom: 1rem; }
input,
textarea,
select,
fieldset {
  margin-bottom: 1.5rem; }
pre,
blockquote,
dl,
figure,
table,
p,
ul,
ol,
form {
  margin-bottom: 2.5rem; }

/* Material*/
.material-icons.md-18 { font-size: 18px; }
.material-icons.md-24 { font-size: 24px; }
.material-icons.md-36 { font-size: 36px; }
.material-icons.md-48 { font-size: 48px; }

/* Utilities
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.u-full-width {
  width: 100%;
  box-sizing: border-box; }
.u-max-full-width {
  max-width: 100%;
  box-sizing: border-box; }
.u-pull-right {
  float: right; }
.u-pull-left {
  float: left; }


/* Misc
–––––––––––––––––––––––––––––––––––––––––––––––––– */
hr {
  margin-top: 3rem;
  margin-bottom: 3.5rem;
  border-width: 0;
  border-top: 1px solid #E1E1E1; }


/* Clearing
–––––––––––––––––––––––––––––––––––––––––––––––––– */

/* Self Clearing Goodness */
.container:after,
.row:after,
.u-cf {
  content: "";
  display: table;
  clear: both; }


/* Media Queries
–––––––––––––––––––––––––––––––––––––––––––––––––– */
/*
Note: The best way to structure the use of media queries is to create the queries
near the relevant code. For example, if you wanted to change the styles for buttons
on small devices, paste the mobile query code up in the buttons section and style it
there.
*/


/* Larger than mobile */
@media (min-width: 400px) {}

/* Larger than phablet (also point when grid becomes active) */
@media (min-width: 550px) {}

/* Larger than tablet */
@media (min-width: 750px) {}

/* Larger than desktop */
@media (min-width: 1000px) {}

/* Larger than Desktop HD */
@media (min-width: 1200px) {}


/*--------- My edit */


body{
  background-color: #fafafa;
  -webkit-font-smoothing: antialiased;
-moz-osx-font-smoothing: grayscale;
text-rendering: optimizeLegibility;
-moz-font-feature-settings: "liga" on;
}

.scroll-down{
  margin-top: 210px;
  overflow-x: hidden;
}

.scroll-down i{
  text-align: left;
  padding: 0;
  display: block;
}
.divider{
  border-bottom: 2px solid black;
  padding-bottom: 10px;
  margin-bottom: 10px;
}

.intro{
  padding-top: 35px;
  padding-bottom: 35px;
  /*background-color: #E8D4FF;*/
  /*background-color: white;*/
  /*background-image: url("../images/teste2.png");
  background-repeat: no-repeat;
  background-position: top center;
  background-size: cover;*/
  background-image: url("../images/stardust.png");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  background-color: black;
}

@media (min-width: 750px) {
.intro{
  padding-top: 140px;
  padding-bottom: 100px;
  }
}

.intro h1{
  text-align: left;
  color: #fafafa;
  margin: 0;
  letter-spacing: 0.03em;
  font-family: 'Patua One', cursive;
}

.intro i{
  color: #fafafa;
}

.myname, a:hover{
  text-decoration: none;
  color: #fafafa;
  cursor:pointer;
}

.myname-active{
  background-image: url("../images/no-background-transparent-min.png");
  background-size: 700px;
  background-position: top right;
  background-repeat: no-repeat;
}

.skills h5{
  margin: 0;
  color: #fafafa;
}
@media (min-width: 750px){
.skills h5{
  display: inline;
  padding-right: 10px;
}
}

.section-title{
  text-align: left;
  color: #333;
  letter-spacing: 0.03em;
  font-family: 'Patua One', cursive;
  position: relative;
}


.gallery{
  position: relative;
  margin-top: 35px;
  margin-bottom: 35px;
}

@media (min-width: 750px){
.gallery{
  margin-top: 70px;
  margin-bottom: 70px;
}}

@media (min-width: 1000px){
.gallery a:hover{
  box-shadow: 1px 3px 10px 0.9px #eee;
  transform: scale(1.02);
}}

.thumb-wrapper{
  margin-bottom: 35px;
  background: white;
  border: 1px solid #eee;
  position: relative;
}

.thumb-info{
  position: absolute;
  padding: 14px;
  left: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.7);
}

/*.where{
  visibility: hidden;
  position: absolute;
  padding: 14px;
  right: 0;
  bottom: 0;
  align-items: center;
}
.where i{
  color: #fafafa;
}

@media (min-width: 1000px){
.thumb-wrapper:hover .where{
  visibility: visible;
}
}*/
/* ... */

